// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should close splash screen if not demo 1`] = `
<DocumentFragment>
  <main
    class="theme-dark debug-screens"
    data-testid="Main"
  >
    <div
      class="Toastify"
    />
    <div
      class="sc-fznLxA kCDRyF"
      data-testid="RouterView__wrapper"
    >
      <div
        class="relative flex flex-col min-h-screen bg-theme-secondary-background"
      >
        <nav
          aria-labelledby="main menu"
          class="sc-fzoiQi gbbOUt"
        >
          <div
            class="px-4 sm:px-6 lg:px-10"
          >
            <div
              class="relative flex justify-between h-20 md:h-24"
            >
              <div
                class="flex items-center my-auto"
              >
                <div
                  class="sc-fzqARJ ktgHVM"
                >
                  <svg
                    width="48"
                  >
                    ark-logo.svg
                  </svg>
                </div>
                <span
                  class="text-2xl font-bold"
                >
                  Desktop Wallet
                </span>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="flex flex-col flex-1 "
        >
          <div
            class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex flex-col justify-center flex-1 text-center"
          >
            <div
              class="container py-16 mx-auto px-14"
            >
              <h1
                class="mb-8 font-extrabold"
              >
                Welcome to the 
                <br />
                 ARK Desktop Wallet
              </h1>
              <div
                class="w-64 mx-auto lg:w-96"
              >
                <svg>
                  welcome-banner.svg
                </svg>
              </div>
              <div
                class="max-w-lg mx-auto mt-8 md:max-w-xl"
              >
                <h2
                  class="mx-4 text-xl font-bold md:text-2xl"
                >
                  Select Profile
                </h2>
                <p
                  class="text-sm text-theme-secondary-text md:text-base"
                >
                  Sign in via MarketSquare or create a new Profile to get started.
                </p>
                <div
                  class="flex flex-col justify-center mt-8 md:space-x-3 md:flex-row"
                >
                  <div>
                    <button
                      class="sc-AxjAm BsmvP"
                      color="primary"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="sc-AxiKw dklFyP"
                        height="20"
                        width="20"
                      >
                        <svg>
                          msq.svg
                        </svg>
                      </div>
                      <span
                        class="ml-2"
                      >
                        Sign In via MarketSquare
                      </span>
                    </button>
                  </div>
                  <button
                    class="sc-AxjAm joLCoM mt-2 md:mt-0"
                    color="primary"
                    type="button"
                  >
                    Create Profile
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`App should render mock 1`] = `
<DocumentFragment>
  <main
    class="theme-dark debug-screens"
    data-testid="Main"
  >
    <div
      class="Toastify"
    />
    <div
      class="sc-fznLxA kCDRyF"
      data-testid="RouterView__wrapper"
    >
      <div
        class="relative flex flex-col min-h-screen bg-theme-secondary-background"
      >
        <nav
          aria-labelledby="main menu"
          class="sc-fzoiQi gbbOUt"
        >
          <div
            class="px-4 sm:px-6 lg:px-10"
          >
            <div
              class="relative flex justify-between h-20 md:h-24"
            >
              <div
                class="flex items-center my-auto"
              >
                <div
                  class="sc-fzqARJ ktgHVM"
                >
                  <svg
                    width="48"
                  >
                    ark-logo.svg
                  </svg>
                </div>
                <span
                  class="text-2xl font-bold"
                >
                  Desktop Wallet
                </span>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="flex flex-col flex-1 "
        >
          <div
            class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex flex-col justify-center flex-1 text-center"
          >
            <div
              class="container py-16 mx-auto px-14"
            >
              <h1
                class="mb-8 font-extrabold"
              >
                Welcome to the 
                <br />
                 ARK Desktop Wallet
              </h1>
              <div
                class="w-64 mx-auto lg:w-96"
              >
                <svg>
                  welcome-banner.svg
                </svg>
              </div>
              <div
                class="max-w-lg mx-auto mt-8 md:max-w-xl"
              >
                <h2
                  class="mx-4 text-xl font-bold md:text-2xl"
                >
                  Select Profile
                </h2>
                <p
                  class="text-sm text-theme-secondary-text md:text-base"
                >
                  Choose from an existing Profile below, sign in via MarketSquare or create a new Profile to get started.
                </p>
                <div
                  class="mt-8 space-y-3"
                >
                  <div
                    data-testid="ProfileCard"
                  >
                    <div
                      class="sc-fzoXWK eHNtYE"
                      data-testid="Card"
                    >
                      <div
                        class="relative p-2 sm:flex sm:items-center"
                      >
                        <div
                          class="flex flex-row justify-between w-full"
                        >
                          <div
                            class="flex items-center"
                          >
                            <div
                              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                              data-testid="profile-card__user--avatar"
                            >
                              <img
                                alt="John Doe"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="John Doe"
                              />
                              <span
                                class="absolute text-sm font-semibold text-theme-background"
                              >
                                JO
                              </span>
                            </div>
                            <div
                              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
                            >
                              <p
                                class="text-sm font-semibold text-theme-neutral-700"
                              >
                                Name
                              </p>
                              <p
                                class="font-semibold text-theme-text"
                                data-testid="profile-card__user--name"
                              >
                                <span
                                  class="sc-fzoydu eoIiNI"
                                >
                                  John Doe
                                </span>
                              </p>
                            </div>
                          </div>
                          <div
                            class="flex items-center"
                          >
                            <div
                              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
                            >
                              <p
                                class="text-sm font-semibold text-theme-neutral-700"
                              >
                                Total balance
                              </p>
                              <span
                                class="font-semibold text-theme-text"
                                data-testid="profile-card__user--balance"
                              >
                                0 BTC
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
                      >
                        <div
                          class="relative"
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="flex justify-center w-4 overflow-hidden"
                          >
                            <div
                              class="sc-AxiKw dzBdqj transition-colors duration-200 p-2 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                settings.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    data-testid="ProfileCard"
                  >
                    <div
                      class="sc-fzoXWK eHNtYE"
                      data-testid="Card"
                    >
                      <div
                        class="relative p-2 sm:flex sm:items-center"
                      >
                        <div
                          class="flex flex-row justify-between w-full"
                        >
                          <div
                            class="flex items-center"
                          >
                            <div
                              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                              data-testid="profile-card__user--avatar"
                            >
                              <img
                                alt="Jane Doe"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                                title="Jane Doe"
                              />
                              <span
                                class="absolute text-sm font-semibold text-theme-background"
                              >
                                JA
                              </span>
                            </div>
                            <div
                              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
                            >
                              <p
                                class="text-sm font-semibold text-theme-neutral-700"
                              >
                                Name
                              </p>
                              <p
                                class="font-semibold text-theme-text"
                                data-testid="profile-card__user--name"
                              >
                                <span
                                  class="sc-fzoydu eoIiNI"
                                >
                                  Jane Doe
                                </span>
                              </p>
                            </div>
                          </div>
                          <div
                            class="flex items-center"
                          >
                            <div
                              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
                            >
                              <p
                                class="text-sm font-semibold text-theme-neutral-700"
                              >
                                Total balance
                              </p>
                              <span
                                class="font-semibold text-theme-neutral-700"
                              >
                                N/A
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
                      >
                        <div
                          class="relative"
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="flex justify-center w-4 overflow-hidden"
                          >
                            <div
                              class="sc-AxiKw dzBdqj transition-colors duration-200 p-2 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                settings.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col justify-center mt-8 md:space-x-3 md:flex-row"
                >
                  <div>
                    <button
                      class="sc-AxjAm BsmvP"
                      color="primary"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="sc-AxiKw dklFyP"
                        height="20"
                        width="20"
                      >
                        <svg>
                          msq.svg
                        </svg>
                      </div>
                      <span
                        class="ml-2"
                      >
                        Sign In via MarketSquare
                      </span>
                    </button>
                  </div>
                  <button
                    class="sc-AxjAm joLCoM mt-2 md:mt-0"
                    color="primary"
                    type="button"
                  >
                    Create Profile
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`App should render splash screen 1`] = `
<DocumentFragment>
  <main
    class="theme-dark debug-screens"
    data-testid="Main"
  >
    <div
      class="Toastify"
    />
    <div
      class="sc-fznLxA kCDRyF"
      data-testid="RouterView__wrapper"
    >
      <div
        class="relative flex flex-col min-h-screen bg-theme-secondary-background"
      >
        <nav
          aria-labelledby="main menu"
          class="sc-fzoiQi gbbOUt"
        >
          <div
            class="px-4 sm:px-6 lg:px-10"
          >
            <div
              class="relative flex justify-between h-20 md:h-24"
            >
              <div
                class="flex items-center my-auto"
              >
                <div
                  class="sc-fzqARJ ktgHVM"
                >
                  <svg
                    width="48"
                  >
                    ark-logo.svg
                  </svg>
                </div>
                <span
                  class="text-2xl font-bold"
                >
                  Desktop Wallet
                </span>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="flex flex-col flex-1 "
        >
          <div
            class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex flex-col justify-center flex-1 text-center"
          >
            <div
              class="container py-16 mx-auto px-14"
            >
              <h1
                class="mb-8 font-extrabold"
              >
                Welcome to the 
                <br />
                 ARK Desktop Wallet
              </h1>
              <div
                class="w-64 mx-auto lg:w-96"
              >
                <svg>
                  welcome-banner.svg
                </svg>
              </div>
              <div
                class="max-w-lg mx-auto mt-8 md:max-w-xl"
              >
                <h2
                  class="mx-4 text-xl font-bold md:text-2xl"
                >
                  Select Profile
                </h2>
                <p
                  class="text-sm text-theme-secondary-text md:text-base"
                >
                  Choose from an existing Profile below, sign in via MarketSquare or create a new Profile to get started.
                </p>
                <div
                  class="mt-8 space-y-3"
                >
                  <div
                    data-testid="ProfileCard"
                  >
                    <div
                      class="sc-fzoXWK eHNtYE"
                      data-testid="Card"
                    >
                      <div
                        class="relative p-2 sm:flex sm:items-center"
                      >
                        <div
                          class="flex flex-row justify-between w-full"
                        >
                          <div
                            class="flex items-center"
                          >
                            <div
                              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                              data-testid="profile-card__user--avatar"
                            >
                              <img
                                alt="John Doe"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="John Doe"
                              />
                              <span
                                class="absolute text-sm font-semibold text-theme-background"
                              >
                                JO
                              </span>
                            </div>
                            <div
                              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
                            >
                              <p
                                class="text-sm font-semibold text-theme-neutral-700"
                              >
                                Name
                              </p>
                              <p
                                class="font-semibold text-theme-text"
                                data-testid="profile-card__user--name"
                              >
                                <span
                                  class="sc-fzoydu eoIiNI"
                                >
                                  John Doe
                                </span>
                              </p>
                            </div>
                          </div>
                          <div
                            class="flex items-center"
                          >
                            <div
                              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
                            >
                              <p
                                class="text-sm font-semibold text-theme-neutral-700"
                              >
                                Total balance
                              </p>
                              <span
                                class="font-semibold text-theme-text"
                                data-testid="profile-card__user--balance"
                              >
                                0 BTC
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
                      >
                        <div
                          class="relative"
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="flex justify-center w-4 overflow-hidden"
                          >
                            <div
                              class="sc-AxiKw dzBdqj transition-colors duration-200 p-2 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                settings.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    data-testid="ProfileCard"
                  >
                    <div
                      class="sc-fzoXWK eHNtYE"
                      data-testid="Card"
                    >
                      <div
                        class="relative p-2 sm:flex sm:items-center"
                      >
                        <div
                          class="flex flex-row justify-between w-full"
                        >
                          <div
                            class="flex items-center"
                          >
                            <div
                              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                              data-testid="profile-card__user--avatar"
                            >
                              <img
                                alt="Jane Doe"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                                title="Jane Doe"
                              />
                              <span
                                class="absolute text-sm font-semibold text-theme-background"
                              >
                                JA
                              </span>
                            </div>
                            <div
                              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
                            >
                              <p
                                class="text-sm font-semibold text-theme-neutral-700"
                              >
                                Name
                              </p>
                              <p
                                class="font-semibold text-theme-text"
                                data-testid="profile-card__user--name"
                              >
                                <span
                                  class="sc-fzoydu eoIiNI"
                                >
                                  Jane Doe
                                </span>
                              </p>
                            </div>
                          </div>
                          <div
                            class="flex items-center"
                          >
                            <div
                              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
                            >
                              <p
                                class="text-sm font-semibold text-theme-neutral-700"
                              >
                                Total balance
                              </p>
                              <span
                                class="font-semibold text-theme-neutral-700"
                              >
                                N/A
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
                      >
                        <div
                          class="relative"
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="flex justify-center w-4 overflow-hidden"
                          >
                            <div
                              class="sc-AxiKw dzBdqj transition-colors duration-200 p-2 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                settings.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col justify-center mt-8 md:space-x-3 md:flex-row"
                >
                  <div>
                    <button
                      class="sc-AxjAm BsmvP"
                      color="primary"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="sc-AxiKw dklFyP"
                        height="20"
                        width="20"
                      >
                        <svg>
                          msq.svg
                        </svg>
                      </div>
                      <span
                        class="ml-2"
                      >
                        Sign In via MarketSquare
                      </span>
                    </button>
                  </div>
                  <button
                    class="sc-AxjAm joLCoM mt-2 md:mt-0"
                    color="primary"
                    type="button"
                  >
                    Create Profile
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`App should render the offline screen if there is no internet connection 1`] = `
<DocumentFragment>
  <main
    class="theme-dark debug-screens"
    data-testid="Main"
  >
    <div
      class="Toastify"
    />
    <div
      class="relative flex flex-col min-h-screen bg-theme-secondary-background"
    >
      <nav
        aria-labelledby="main menu"
        class="sc-fzoiQi gbbOUt"
      >
        <div
          class="px-4 sm:px-6 lg:px-10"
        >
          <div
            class="relative flex justify-between h-20 md:h-24"
          >
            <div
              class="flex items-center my-auto"
            >
              <div
                class="sc-fzqARJ ktgHVM"
              >
                <svg
                  width="48"
                >
                  ark-logo.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="flex flex-col flex-1 "
      >
        <div
          class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex flex-col justify-center flex-1 text-center"
        >
          <div
            class="container py-16 mx-auto px-14"
          >
            <div
              class="sm:mx-auto sm:w-full sm:max-w-md"
            >
              <svg>
                cannot-connect-banner.svg
              </svg>
            </div>
            <div
              class="mt-8"
              data-testid="Offline__text"
            >
              <h2
                class="text-2xl font-bold"
              >
                Cannot Connect
              </h2>
              <p
                class="text-theme-secondary-text"
              >
                Check your internet connection if it doesn't work, check it again.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`App should render welcome screen after splash screen 1`] = `
<DocumentFragment>
  <main
    class="theme-dark debug-screens"
    data-testid="Main"
  >
    <div
      class="Toastify"
    />
    <div
      class="sc-fznLxA kCDRyF"
      data-testid="RouterView__wrapper"
    >
      <div
        class="relative flex flex-col min-h-screen bg-theme-secondary-background"
      >
        <nav
          aria-labelledby="main menu"
          class="sc-fzoiQi gbbOUt"
        >
          <div
            class="px-4 sm:px-6 lg:px-10"
          >
            <div
              class="relative flex justify-between h-20 md:h-24"
            >
              <div
                class="flex items-center my-auto"
              >
                <div
                  class="sc-fzqARJ ktgHVM"
                >
                  <svg
                    width="48"
                  >
                    ark-logo.svg
                  </svg>
                </div>
                <span
                  class="text-2xl font-bold"
                >
                  Desktop Wallet
                </span>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="flex flex-col flex-1 "
        >
          <div
            class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex flex-col justify-center flex-1 text-center"
          >
            <div
              class="container py-16 mx-auto px-14"
            >
              <h1
                class="mb-8 font-extrabold"
              >
                Welcome to the 
                <br />
                 ARK Desktop Wallet
              </h1>
              <div
                class="w-64 mx-auto lg:w-96"
              >
                <svg>
                  welcome-banner.svg
                </svg>
              </div>
              <div
                class="max-w-lg mx-auto mt-8 md:max-w-xl"
              >
                <h2
                  class="mx-4 text-xl font-bold md:text-2xl"
                >
                  Select Profile
                </h2>
                <p
                  class="text-sm text-theme-secondary-text md:text-base"
                >
                  Choose from an existing Profile below, sign in via MarketSquare or create a new Profile to get started.
                </p>
                <div
                  class="mt-8 space-y-3"
                >
                  <div
                    data-testid="ProfileCard"
                  >
                    <div
                      class="sc-fzoXWK eHNtYE"
                      data-testid="Card"
                    >
                      <div
                        class="relative p-2 sm:flex sm:items-center"
                      >
                        <div
                          class="flex flex-row justify-between w-full"
                        >
                          <div
                            class="flex items-center"
                          >
                            <div
                              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                              data-testid="profile-card__user--avatar"
                            >
                              <img
                                alt="John Doe"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="John Doe"
                              />
                              <span
                                class="absolute text-sm font-semibold text-theme-background"
                              >
                                JO
                              </span>
                            </div>
                            <div
                              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
                            >
                              <p
                                class="text-sm font-semibold text-theme-neutral-700"
                              >
                                Name
                              </p>
                              <p
                                class="font-semibold text-theme-text"
                                data-testid="profile-card__user--name"
                              >
                                <span
                                  class="sc-fzoydu eoIiNI"
                                >
                                  John Doe
                                </span>
                              </p>
                            </div>
                          </div>
                          <div
                            class="flex items-center"
                          >
                            <div
                              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
                            >
                              <p
                                class="text-sm font-semibold text-theme-neutral-700"
                              >
                                Total balance
                              </p>
                              <span
                                class="font-semibold text-theme-text"
                                data-testid="profile-card__user--balance"
                              >
                                0 BTC
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
                      >
                        <div
                          class="relative"
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="flex justify-center w-4 overflow-hidden"
                          >
                            <div
                              class="sc-AxiKw dzBdqj transition-colors duration-200 p-2 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                settings.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    data-testid="ProfileCard"
                  >
                    <div
                      class="sc-fzoXWK eHNtYE"
                      data-testid="Card"
                    >
                      <div
                        class="relative p-2 sm:flex sm:items-center"
                      >
                        <div
                          class="flex flex-row justify-between w-full"
                        >
                          <div
                            class="flex items-center"
                          >
                            <div
                              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                              data-testid="profile-card__user--avatar"
                            >
                              <img
                                alt="Jane Doe"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"30\\" fill=\\"rgb(63, 81, 181)\\"/></svg>"
                                title="Jane Doe"
                              />
                              <span
                                class="absolute text-sm font-semibold text-theme-background"
                              >
                                JA
                              </span>
                            </div>
                            <div
                              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
                            >
                              <p
                                class="text-sm font-semibold text-theme-neutral-700"
                              >
                                Name
                              </p>
                              <p
                                class="font-semibold text-theme-text"
                                data-testid="profile-card__user--name"
                              >
                                <span
                                  class="sc-fzoydu eoIiNI"
                                >
                                  Jane Doe
                                </span>
                              </p>
                            </div>
                          </div>
                          <div
                            class="flex items-center"
                          >
                            <div
                              class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
                            >
                              <p
                                class="text-sm font-semibold text-theme-neutral-700"
                              >
                                Total balance
                              </p>
                              <span
                                class="font-semibold text-theme-neutral-700"
                              >
                                N/A
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="absolute top-0 right-0 flex items-center m-2 space-x-2"
                      >
                        <div
                          class="relative"
                          data-testid="dropdown__toggle"
                        >
                          <div
                            class="flex justify-center w-4 overflow-hidden"
                          >
                            <div
                              class="sc-AxiKw dzBdqj transition-colors duration-200 p-2 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                settings.svg
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col justify-center mt-8 md:space-x-3 md:flex-row"
                >
                  <div>
                    <button
                      class="sc-AxjAm BsmvP"
                      color="primary"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="sc-AxiKw dklFyP"
                        height="20"
                        width="20"
                      >
                        <svg>
                          msq.svg
                        </svg>
                      </div>
                      <span
                        class="ml-2"
                      >
                        Sign In via MarketSquare
                      </span>
                    </button>
                  </div>
                  <button
                    class="sc-AxjAm joLCoM mt-2 md:mt-0"
                    color="primary"
                    type="button"
                  >
                    Create Profile
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
